[package]
name = "sparslog"
version = "0.1.2"
edition = "2024"
license = "MIT"
authors = ["Thomas Habets <thomas@habets.se>"]
readme = "README.md"
repository = "https://github.com/ThomasHabets/sparslog"
description = "SDR receiver for IKEA sparsnäs"
keywords = ["SDR", "ikea"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
ctrlc = "3"
log = "0.4"
num = "0.4"
rustradio = {version="0.14.2", features=["rtlsdr", "fast-math", "async"]}
#rustradio = {path="../rustradio", features=["rtlsdr", "fast-math", "async"]}
stderrlog = "0.6"
clap = {version = "4", features = ["derive"]}
console-subscriber = "0.4.1"
tokio = "1.45.0"

[features]
default = []
tokio-unstable = ["tokio/tracing", "rustradio/tokio-unstable"]

[[bin]]
name = "sparslog"
path = "src/main.rs"

[[bin]]
name = "sparslog-async"
path = "src/main_async.rs"

[lib]
path = "src/sparslog.rs"
